--- a/src/layouts/MainLayout.module.scss
+++ b/src/layouts/MainLayout.module.scss
@@ -2,10 +2,8 @@
 	@apply flex flex-col;
 	height: 100vh;
 	background: rgb(1, 0, 1);
-	background: linear-gradient(
-		180deg,
-		rgba(1, 0, 1, 1) 0%,
-		rgba(47, 19, 54, 1) 85%,
-		rgba(1, 0, 1, 1) 100%
-	);
+	background: linear-gradient(180deg,
+			rgba(1, 0, 1, 1) 0%,
+			rgba(47, 19, 54, 1) 85%,
+			rgba(1, 0, 1, 1) 100%);
 }
