Feat (Header): improve Header.module

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,7 +1,7 @@
 .logo {
-	@apply py-[35px] font-medium uppercase cursor-pointer;
+	@apply py-[35px] font-semibold uppercase cursor-pointer;
 	font-size: 45px;
-	letter-spacing: 2.475px;
+	letter-spacing: 3px;
 }
 
 .menu {
