--- a/src/components/UI/AuthField/AuthField.module.scss
+++ b/src/components/UI/AuthField/AuthField.module.scss
@@ -4,6 +4,7 @@
 
 .input {
 	@apply border px-2 py-1 text-[18px] rounded-md duration-300;
+	width: 280px;
 	border-color: #743b6c;
 	background-color: #001;
 	color: #ffcffa;
