--- a/src/components/Header/AuthComponent/AuthComponent.module.scss
+++ b/src/components/Header/AuthComponent/AuthComponent.module.scss
@@ -5,7 +5,6 @@ $avatarSize: 40px;
 	min-width: 170px;
 	background-color: #a9379c29;
 	border-color: #c36eb7c5;
-	// border-color: #c36eb889;
 
 	&:hover {
 		box-shadow: 0 0 8px #c36eb7c5;
@@ -15,6 +14,11 @@ $avatarSize: 40px;
 
 .title {
 	color: #ffdffa;
+	width: 65px;
+	text-align: center;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .avatar {
