--- a/src/components/UI/AdminUi/Buttons/Buttons.module.scss
+++ b/src/components/UI/AdminUi/Buttons/Buttons.module.scss
@@ -28,3 +28,11 @@
 		background-color: rgba(185, 34, 0, 0.652)
 	}
 }
+
+.button__back {
+	@extend .button;
+
+	&:hover {
+		background-color: rgba(185, 166, 0, 0.652)
+	}
+}
