--- a/src/components/MyOrderDetails/MyOrderDetails.module.scss
+++ b/src/components/MyOrderDetails/MyOrderDetails.module.scss
@@ -3,17 +3,19 @@
 }
 
 .container {
-	@apply flex flex-col bg-[#131620] pt-10 px-4;
+	@apply flex flex-col pt-10 px-4;
 	position: relative;
 	width: 500px;
 	height: 100%;
+	background-color: #29122c;
+	box-shadow: 0 0 5px #f252da;
 
 	transition: transform .3s, opacity .6s ease-in-out;
 }
 
 .field {
 	@apply flex justify-center gap-2 py-1 px-4;
-	background-color: #0e1118;
+	background-color: #1b0c1d;
 	font-size: 18px;
 	border-radius: 6px;
 	box-shadow: 0 0 5px black;
@@ -22,23 +24,15 @@
 }
 
 .select {
-	@apply bg-prisma-blue px-2 py-2;
+	@apply px-2 py-2;
 	font-size: 18px;
 	cursor: pointer;
 	width: 100%;
-	background-color: #0e1118;
+	background-color: #1b0c1d;
 
 	border: 1px solid #1d2331;
 	border-radius: 6px;
 	box-shadow: 0 0 5px black;
-}
-
-.input {
-	@apply py-1;
-	font-size: 18px;
-	text-align: center;
-	background-color: #0e1118;
-	width: 100%;
 }
 
 .comment__title {
@@ -48,9 +42,9 @@
 
 .comment {
 	@apply py-2 px-3;
-	background-color: #0e1118;
+	background-color: #1b0c1d;
 
-	border: 1px solid #1d2331;
+	border: 1px solid #351839;
 	border-radius: 6px;
 	box-shadow: 0 0 5px black;
 	height: 200px;
@@ -58,20 +52,21 @@
 }
 
 .button {
-	@apply py-1;
-	border-radius: 6px;
-	background-color: #495467;
+	@apply py-1 text-[18px];
+	color: #00FFC6;
+	background-color: #1c5f515f;
+	border: 1px solid #31ac915f;
+	border-radius: 5px;
 	transition: background-color .3s;
 
 	&:hover {
-		background-color: #2b323d;
+		background-color: #267a685f;
 	}
 }
 
-.textarea {
+.note {
 	@apply px-4 py-1;
-	background-color: #0e1118;
-	resize: none;
+	background-color: #1b0c1d;
 	height: 75%;
 	overflow: auto;
 }
