--- a/src/components/RepairCardMenu/RepairCardMenu.module.scss
+++ b/src/components/RepairCardMenu/RepairCardMenu.module.scss
@@ -1,8 +1,8 @@
 .menu {
 	@apply flex flex-col gap-1;
 
-	>li {
-		@apply flex gap-2 items-center;
+	> li {
+		@apply flex gap-2;
 		color: #81ffe4ce;
 	}
 }
