--- a/src/pages/RepairPage/RepairPage.module.scss
+++ b/src/pages/RepairPage/RepairPage.module.scss
@@ -3,7 +3,7 @@
 }
 
 .menu {
-	@apply inline-grid justify-center;
+	@apply grid justify-center;
 	grid-template-columns: repeat(4, auto);
 	grid-column-gap: 20px;
 	grid-row-gap: 40px;
