Add rooms for chat

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -32,6 +32,6 @@
 		transition: background-color 0.3s, border-color 0.3s, color 0.3s,
 			padding 0.3s;
 
-		will-change: padding, color;
+		will-change: padding;
 	}
 }
