--- a/src/pages/RepairPage/RepairPage.module.scss
+++ b/src/pages/RepairPage/RepairPage.module.scss
@@ -1,10 +1,10 @@
 .top__title {
-	font-size: 23px
+	font-size: 23px;
 }
 
 .menu {
-	@apply grid justify-center;
-	grid-template-columns: repeat(4, auto);
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
 	grid-column-gap: 20px;
 	grid-row-gap: 40px;
 }
