--- a/src/pages/ContactPage/ContactPage.module.scss
+++ b/src/pages/ContactPage/ContactPage.module.scss
@@ -1,12 +1,5 @@
-.container__info {
-	@apply px-6 py-6;
-
-	text-align: center;
-	font-size: 22px;
-	color: rgb(255, 210, 248);
-
-	border: 1px solid rgba(220, 121, 205, 0.621);
-	border-radius: 6px;
+.wrapper {
+	@apply flex justify-center items-center gap-[70px] pt-[150px];
 }
 
 .info__wait {
@@ -17,48 +10,4 @@
 	border-radius: 6px;
 	background-color: rgba(59, 32, 55, 0.238);
 	box-shadow: 0 0 5px rgb(157, 49, 141);
-}
-
-.button {
-	@apply py-2;
-	margin-top: 20px;
-	width: 100%;
-	border: 1px solid rgba(220, 121, 205, 0.621);
-	color: rgb(255, 210, 248);
-	border-radius: 6px;
-	transition: background-color 0.3s, box-shadow 0.3s;
-
-	&:hover {
-		background-color: rgba(59, 32, 55, 0.238);
-		box-shadow: 0 0 5px rgb(157, 49, 141);
-	}
-}
-
-.chat__info {
-	@apply flex items-center px-8;
-	color: rgb(255, 210, 248);
-	font-size: 18px;
-	width: 580px;
-	height: 300px;
-}
-
-.input__message {
-	@apply px-2 py-[8.5px];
-	resize: none;
-	color: rgb(253, 221, 249);
-	background-color: rgba(63, 34, 59, 0.123);
-	height: 70px;
-	width: 100%;
-	border: 1px solid rgba(147, 81, 137, 0.621);
-	border-radius: 6px;
-	transition: background-color 0.3s;
-
-	&::placeholder {
-		color: rgba(194, 154, 189, 0.743);
-	}
-
-	&:focus,
-	&:hover {
-		background-color: rgba(0, 0, 0, 0.123);
-	}
 }
